--- a/docs/en/01.introduction/03.installation.md
+++ b/docs/en/01.introduction/03.installation.md
@@ -4,7 +4,7 @@ title: Installation
 
 ### Installation
 
-The Templates module is a paid addon and requires purchasing from the addon store OR a paid subscription.
+The Templates module is a paid addon and requires purchasing from the addon store OR a [PRO subscription](https://pyrocms.com/pro).
 
 ##### Installing from Store Download
 
@@ -18,16 +18,10 @@ Next install the addon with the `addon:install` command:
 
 ##### Installing with Composer Subscription
 
-You can install the Templates module with Composer as a VCS repository if you have a subscription:
+You can download install the Templates module with Composer if you have a [PRO subscription](https://pyrocms.com/pro):
 
-    {
-         "require": {
-            "anomaly/templates-module": "~1.1.0"
-        },
-        "repositories": [
-            {
-                "type": "vcs",
-                "url": "https://github.com/anomalylabs/templates-module"
-            }
-        ]
-    }
+```bash
+composer require anomaly/templates-module
+
+php artisan addon:install anomaly.module.templates
+```
