--- a/docs/en/01.introduction/03.installation.md
+++ b/docs/en/01.introduction/03.installation.md
@@ -10,11 +10,15 @@ The Templates module is a paid addon and requires purchasing from the addon stor
 
 You can install the Templates module by downloading the addon and placing it within your site's addon directory:
 
-    /addons/{application_ref}/anomaly/*
+```bash
+/addons/{application_ref}/anomaly/*
+```
 
 Next install the addon with the `addon:install` command:
 
-    php artisan addon:install anomaly.module.templates
+```bash
+php artisan addon:install anomaly.module.templates
+```
 
 ##### Installing with Composer Subscription
 
